# VoxtoraNotesGenerator

./: README.md  index.html  package-lock.json  vite.config.ts
backend/: .gitignore  main.py  pyproject.toml
backend/services/: file_manager.py  notes.py  pdf.py  transcription.py  translation.py  youtube.py
frontend/: tailwind.config.ts
frontend/src/components/: LoadingPage.tsx  ResultsPage.tsx
frontend/src/lib/: api.ts
src/: index.css
src/components/: CoverPage.tsx  FormPage.tsx
src/pages/: Index.tsx
